--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   google_fonts: ^6.2.1
   dropdown_button2: ^2.3.9
+  video_player: ^2.8.3
 
 dev_dependencies:
   flutter_test:
