--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,11 @@ dependencies:
   google_fonts: ^6.2.1
   dropdown_button2: ^2.3.9
   video_player: ^2.8.3
+  visibility_detector: ^0.4.0+2
+  flick_video_player: ^0.7.0
+  flutter_inappwebview: ^6.0.0
+  url_launcher: ^6.2.5
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
