--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_inappwebview: ^6.0.0
   url_launcher: ^6.2.5
   path_provider: ^2.1.2
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
