--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   url_launcher: ^6.2.5
   path_provider: ^2.1.2
   carousel_slider: ^4.2.1
+  wakelock: ^0.6.2
+  universal_html: ^2.2.4
 
 dev_dependencies:
   flutter_test:
