--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   carousel_slider: ^4.2.1
   wakelock: ^0.6.2
   universal_html: ^2.2.4
+  vector_math: ^2.1.4
 
 dev_dependencies:
   flutter_test:
