--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,9 +42,12 @@ dependencies:
   get_it: ^7.6.7
   flutter_bloc: ^8.1.4
   rxdart: ^0.27.7
-  http: ^1.2.1
-  shared_preferences: ^2.2.2
   logger: ^2.1.0
+  http: ^1.2.1
+  universal_html: ^2.2.4
+  shared_preferences: ^2.2.2
+  path_provider: ^2.1.2
+  intl: ^0.18.1
   flutter_svg: ^2.0.10+1
   google_fonts: ^6.2.1
   dropdown_button2: ^2.3.9
@@ -52,13 +55,11 @@ dependencies:
   visibility_detector: ^0.4.0+2
   flick_video_player: ^0.7.0
   flutter_inappwebview: ^6.0.0
-  url_launcher: ^6.2.5
-  path_provider: ^2.1.2
   carousel_slider: ^4.2.1
   wakelock: ^0.6.2
-  universal_html: ^2.2.4
   cached_network_image: ^3.3.1
-  intl: ^0.18.1
+  flutter_cache_manager: ^3.3.1
+
 
 dev_dependencies:
   flutter_test:
