--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,8 @@ dependencies:
   cached_network_image: ^3.3.1
   flutter_cache_manager: ^3.3.1
   control_style: ^0.1.0
-
+  google_mlkit_text_recognition: ^0.11.0
+  file_picker: ^5.2.10
 
 dev_dependencies:
   flutter_test:
@@ -75,7 +76,6 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
