--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,6 +59,30 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    flavorDimensions "default"
+    productFlavors {
+        dev {
+            dimension "default"
+            applicationIdSuffix ".dev"
+            versionNameSuffix "-dev"
+            resValue "string", "app_name", "Dev"
+            resValue "string", "host", "dev"
+        } 
+        stg {
+            dimension "default"
+            applicationIdSuffix ".stg"
+            versionNameSuffix "-stg"
+            resValue "string", "app_name", "Stg"
+            resValue "string", "host", "stg"
+        }
+        prod {
+            dimension "default"
+            applicationIdSuffix ""
+            versionNameSuffix ""
+            resValue "string", "app_name", "prod"
+            resValue "string", "host", "prod"
+        }
+    }
 }
 
 flutter {
