--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,8 +60,9 @@ dependencies:
   cached_network_image: ^3.3.1
   flutter_cache_manager: ^3.3.1
   control_style: ^0.1.0
-  google_mlkit_text_recognition: ^0.11.0
   file_picker: ^5.2.10
+  google_mlkit_text_recognition: ^0.6.0
+  camera: ^0.10.5+9
 
 dev_dependencies:
   flutter_test:
