--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -43,13 +43,11 @@ dependencies:
   flutter_bloc: ^8.1.4
   rxdart: ^0.27.7
   logger: ^2.1.0
-  http: ^1.2.1
   universal_html: ^2.2.4
   shared_preferences: ^2.2.2
   path_provider: ^2.1.2
   intl: ^0.18.1
   flutter_svg: ^2.0.10+1
-  google_fonts: ^6.2.1
   dropdown_button2: ^2.3.9
   video_player: ^2.8.3
   visibility_detector: ^0.4.0+2
@@ -63,6 +61,8 @@ dependencies:
   file_picker: ^5.2.10
   google_mlkit_text_recognition: ^0.6.0
   camera: ^0.10.5+9
+  google_fonts: ^6.2.0
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
